--- a/style.css
+++ b/style.css
@@ -21,6 +21,16 @@
   --font-rich-text-small: 13;
 }
 
+@font-face {
+  font-family: "ElGrosa";
+  src: url("ElGrosa-Display.woff2");
+}
+
+@font-face {
+  font-family: "ASM";
+  src: url("ASM-Regular.woff2");
+}
+
 body,
 h1,
 h2,
@@ -53,9 +63,9 @@ ul {
 }
 
 header {
-  font-family: var(--font-stack-header);
-  font-size: var(--font-style-header);
-  font-weight: var(--font-weight-header);
+  font-family: "ASM";
+
+  font-weight: 400;
   background-color: var(--background-color);
   /*position: fixed; 
   top: 0;
@@ -68,6 +78,9 @@ header {
   transition: 0.6s;
   flex-direction: column;
   border-bottom: #f9423a 2px solid;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 
 .nav-container {
@@ -134,16 +147,18 @@ header .nav-right svg {
   box-sizing: border-box;
   color: var(--foreground-color);
   background-image: url("imagens/Hero Image.webp");
-  height:800px;
+  height: 800px;
   background-image: url("https://www.delacalle.mx/cdn/shop/files/Jan-Image-2024.jpg?v=1704324669");
   background-position-x: 50%;
   background-position-y: 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 0 3%;
+  display: flex;
+  align-items: center;
 }
 
 .hero-section h1 {
-  position: absolute;
   background-color: transparent;
   font-size: var(--font-size-header);
   font-weight: var(--font-weight-header);
@@ -157,10 +172,27 @@ header .nav-right svg {
   background: #077838;
   cursor: pointer;
   transition: background 0.3s ease;
-  position: absolute;
-
 }
 
 .hero-btn input:hover {
   background: #f00;
+}
+
+.hero-section-content {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: white;
+  font-family: "ElGrosa";
+  transform: perspective(1px) rotate(-2deg);
+  letter-spacing: 2px;
+}
+
+.hero-section-content h1 {
+  text-align: center;
+  font-size: 26px;
+}
+
+.hero-section-content h1 span {
+  font-size: 68px;
 }
